kubernetes/apps/cycling-calendar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cycling-calendar
  namespace: cycling-calendar
  labels:
    app.kubernetes.io/name: cycling-calendar
spec:
  selector:
    app.kubernetes.io/name: cycling-calendar
  ports:
    - name: http
      port: 8080
      targetPort: http
