kubernetes/apps/cycling-calendar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cycling-calendar
  namespace: cycling-calendar
  labels:
    app.kubernetes.io/name: cycling-calendar
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - cycling.lab.seandre.dev
      secretName: cycling-calendar-public-tls
  rules:
    - host: cycling.lab.seandre.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cycling-calendar
                port:
                  name: http
